# gst-mipi-demo

./: autostart-gst-mipi-demo.service  config.json  devices.vala  launch-gst-mipi-demo.sh  main.vala  meson.build  props.json
